	data frames, with a warning.

    o	format.info() now also works with `nsmall' in analogy with
	format.default().

    o	gamma(n) is very slightly more precise for integer n in 11:50.

    o	? and help() will accept more un-quoted arguments, e.g. NULL.

    o	The "?" operator has new forms for querying documentation on
	S4 methods.  See the online documentation.

    o	New argument fixed = TRUE for grep() and regexpr() to avoid the
	need to escape strings to match.

    o	grep(x, ..., value = TRUE) preserves names of x.

    o	hist.POSIXt() can now pass arguments to hist.default()

    o	legend() and symbols() now make use of xy.coords() and accept
	a wider range of coordinate specifications.

    o	Added function library.dynam.unload() to call dyn.unload() on
	a loaded DLL and tidy up.  This is called for all the standard
	packages in namespaces with DLLs if their namespaces are unloaded.

    o	lm(singular.ok = FALSE) is now implemented.

    o	Empty lm() and glm() fits are now handled by the normal
	code: there are no methods for classes "lm.null" and
	"glm.null".  Zero-rank fits are handled consistently.

    o	make.names() has improvements, and there is a new auxiliary
	function make.unique().	 (Based on code contributed by Tom
	Minka, since converted to a .Internal function.)  In
	particular make.names() now recognises that names beginning
	with a dot are valid and that reserved words are not.

    o	methods() has a print method which asterisks functions which
	are not user-visible.  methods(class = "foo") now lists
	non-visible functions, and checks that there is a matching generic.

    o	model.matrix() now warns when it removes the response from the
	rhs of the formula: that this happens is now documented on its
	help page.

    o	New option `locatorBell' to control the confirmation beep
	during the use of locator() and identify().

    o	New option("scipen") provides some user control over the
	printing of numbers in fixed-point or exponential notation.